--- a/eu.hohenegger.emfviewer.p2udpatesite/pom.xml
+++ b/eu.hohenegger.emfviewer.p2udpatesite/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <relativePath>../eu.hohenegger.emfviewer.releng/pom.xml</relativePath>
+    <relativePath>../pom.xml</relativePath>
     <groupId>eu.hohenegger.emfviewer</groupId>
     <artifactId>parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
