--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,7 @@
 language: java
+notifications:
+  email:
+    recipients:
+      - travis-ci.org-SimpleEclipseViewer@hohenegger.eu
+    on_success: change
+    on_failure: always
